--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
-<?php echo '<p>Hallo Welt</p>'; ?>
+<?php 
+echo '<p>Hallo Welt</p>'; 
+?>
 </body>
 </html>
