--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
+<h1>Miene Coole Schach Website</h1>
+<img src="Chess.png" alt="Cooles Schach Zitat">
 <p>I'm hosted with GitHub Pages.</p>
-<?php 
-echo '<p>Hallo Welt</p>'; 
-?>
+
 </body>
 </html>
